Se implementó el DELETE de Tarjetas de Crédito

--- a/laboratorio04/CasoEstudio03/Client.in
+++ b/laboratorio04/CasoEstudio03/Client.in
@@ -7,3 +7,8 @@ Gustavo Eduardo Ordoño Poma
 79797979
 Diego Alonso Huamani Luque
 80.50
+
+13121110987654321
+45454545
+Diego Ivan Pacori Anccasi
+120.25
