--- a/laboratorio07/Ecommerce/server/package.json
+++ b/laboratorio07/Ecommerce/server/package.json
@@ -5,6 +5,7 @@
   "main": "./src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon ./src/server.js",
     "start": "node ./src/server.js"
   },
   "keywords": [],
@@ -14,5 +15,8 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "soap": "^1.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.3"
   }
 }
